5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1638_2449.log
== TEST (2019-04-09 10:20:44) 
-- CODE:
coeficiente_a = float(input("Determine o coeficiente a"))
coeficiente_b = float(input("Determine o coeficiente b"))
coeficiente_c = float(input("Determine o coeficiente c"))
coeficiente_d = float(input("Determine o coeficiente d"))
coeficiente_e = float(input("Determine o coeficiente e"))
coeficiente_f = float(input("Determine o coeficiente f"))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:27:05) 
-- CODE:
coeficiente_a = float(input("Determine o coeficiente a: "))
coeficiente_b = float(input("Determine o coeficiente b: "))
coeficiente_c = float(input("Determine o coeficiente c: "))
coeficiente_d = float(input("Determine o coeficiente d: "))
coeficiente_e = float(input("Determine o coeficiente e: "))
coeficiente_f = float(input("Determine o coeficiente f: "))

x = ((c * e) - (b * f)) / ((a * e) - (b * d))
y = ((a * f) - (c * d)) / ((a * e) - (b * d))



print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = ((c * e) - (b * f)) / ((a * e) - (b * d))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
